<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kanji Fix</string>
    <string name="action_settings">Settings</string>

    <string name="apply_fix">Apply Fix</string>
    <string name="revert">Revert</string>

    <string name="kanji_to_kanji">Kanji to Kanji</string>
    <string name="reference_font">Reference Japanese font</string>
    <string name="reference_text">The characters above should match the Kanji shown below:</string>
    <string name="more_info">More Information</string>
    <string name="install_alternative">Install Alternative Font</string>
    <string name="install_backup_script">Install Backup Script</string>
    <string name="remove_backup_script">Remove Backup Script</string>

    <string name="fix_not_applied">"Your device is showing <b>Chinese characters</b> instead of Kanji!\n\nClick the \"Apply Fix\" button below to prioritize Japanese Kanji instead. A device reboot will be required to see any changes.\n\nBelow is an example of what your current font looks like:"</string>
    <string name="fix_applied">"Your device is showing <b>Kanji</b>. You\'re all set!\n\nClick the \"Revert\" button below to restore your original fonts. A device reboot will be required.\n\nBelow is an example of what your current font looks like:"</string>
    <string name="fix_applied_no_backup">"Your device is showing <b>Kanji</b>. You\'re all set!\n\nNo backup of your original file was found, but we can try to revert using the stock Android fonts.\n\nIf your ROM uses custom fonts, you may not want to try this.\n\nBelow is an example of what your current font looks like:"</string>
    <string name="fix_not_supported">Your device is running Android 7.0+ and does not require this tool. Instead, navigate to Settings > Languages and add Japanese (日本語) to your language list for the same effect. Come back here to verify that the correct Kanji show, as the effects will be immediate.</string>
</resources>
