<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_more_info"
          android:title="@string/more_info"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/menu_install_alternative"
          android:title="@string/install_alternative"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/menu_install_backup_script"
          android:title="@string/install_backup_script"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/menu_remove_backup_script"
          android:title="@string/remove_backup_script"
          android:orderInCategory="100"
          app:showAsAction="never" />
</menu>
